Fix mistakes: flex for item, remove redundant overflow hidden for todos-add

--- a/src/styles/base/filter/filter.scss
+++ b/src/styles/base/filter/filter.scss
@@ -1,11 +1,12 @@
-@import "../../config/vars/colors";
+@import "../../config/globals";
 
 .filter {
-    border: none;
+    border: 0;
     background-color: $c-filters-background;
     color: $c-text;
     outline: none;
     cursor: pointer;
+    padding: $offset_half $offset_2x;
 }
 
 .filter.__active {
