--- a/src/styles/project/todos-add/todos-add.scss
+++ b/src/styles/project/todos-add/todos-add.scss
@@ -19,7 +19,6 @@ $todos-add-height: 64px;
     .todo-add_select-all-action .action_visual {
         width: 24px;
         height: 12px;
-        overflow: hidden;
         position: absolute;
         top: 50%;
         margin-top: -6px;
